fixed the issue of about-image on small devices

--- a/src/components/about me/style.css
+++ b/src/components/about me/style.css
@@ -22,17 +22,13 @@
     margin-left: 50px;
 }
 .aboutMeRight {
-    display: flex;
+    display: inline-flex;
     margin: auto;
-}
-.aboutMeRight>div:nth-child(odd){
-    margin-top: 50px;
 }
 .aboutMeRight>img {
     width: 90%;
     height: 90%;
     margin: 5%;
-    height: auto;
     border-radius: 50%;
 }
 
